--- a/Report/refs.bib
+++ b/Report/refs.bib
@@ -156,4 +156,26 @@
 @misc{acq_modes,
 	title = {Acquisition Modes},
 	url = {https://sentinels.copernicus.eu/web/sentinel/user-guides/sentinel-1-sar/acquisition-modes}
+},
+@Article{Filipponi_2019,
+	AUTHOR = {Filipponi, Federico},
+	TITLE = {Sentinel-1 GRD Preprocessing Workflow},
+	JOURNAL = {Proceedings},
+	VOLUME = {18},
+	YEAR = {2019},
+	NUMBER = {1},
+	ARTICLE-NUMBER = {11},
+	URL = {https://www.mdpi.com/2504-3900/18/1/11},
+	ISSN = {2504-3900},
+	DOI = {10.3390/ECRS-3-06201}
+},
+@INPROCEEDINGS{Yommy_2015,
+	author={Yommy, Aiyeola Sikiru and Liu, Rongke and Wu, And Shuang},
+	booktitle={2015 7th International Conference on Intelligent Human-Machine Systems and Cybernetics}, 
+	title={SAR Image Despeckling Using Refined Lee Filter}, 
+	year={2015},
+	volume={2},
+	number={},
+	pages={260-265},
+	doi={10.1109/IHMSC.2015.236}
 }
