Adding the submitted first draft

--- a/Report/EspinozaReport.tex
+++ b/Report/EspinozaReport.tex
@@ -43,7 +43,7 @@
 % ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
 % ------------------------------------------------------------------------------------------------------------
 	\section{Literature Review}
-		It is estimated that half of the worlds population is currently living in cities, with that number expected to rise to 60\% by 2030, but the rapid rate of urbanization has not resulted in an equal increase in public amenities or affordable housing \cite{UN_Sustanability_Report}.
+		It is estimated that half of the world's population is currently living in cities, with that number expected to rise to 60\% by 2030, but the rapid rate of urbanization has not resulted in an equal increase in public amenities or affordable housing \cite{UN_Sustanability_Report}.
 		The lack of affordable housing has led to the creation of informal settlements, commonly referred to as 'slums', or deprived urban areas (DUA).
 		These areas of concentrated poverty often lack public amenities such as access to clean water or waste disposal, and are known to have hazardous effects on the inhabitants health \cite{Georgano_Stefanos_2021}.
 		
@@ -58,7 +58,7 @@
 		
 	\subsection{Remote Sensing}
 		There are many ways in which remote sensing can be used to get a better understanding of an area.
-		At a high level satellite images can be used to train deep learning models that classify areas as urban or rural \cite{Guo_Jinxin_2019}, but research has also focused on smaller features, such as waste piles and vehicles.
+		At a high level, satellite images can be used to train deep learning models that classify areas as urban or rural \cite{Guo_Jinxin_2019}, but research has also focused on smaller features, such as waste piles and vehicles.
 		
 		Radar systems are desirable for data collection because they are not affected by weather conditions such as clouds or lighting.
 		The X band of Synthetic Aperture Radars (SAR), which has frequencies in the range of 8-12 GHz, produces high resolution images that can be analyzed for feature extraction \cite{Wurm_2017}.
@@ -156,7 +156,8 @@
 	
 	The 'Apply Orbit Profile' step of the data preprocessing was disregarded because orbit profiles are not available until 21 days after data acquisition.
 	
-	The calibration was failing due to a buffer overflow, currently debugging the issue.
+	The radiometric calibration is currently failing due to a buffer overflow, that problem is currently being investigated.
+	
 
 
 % ------------------------------------------------------------------------------------------------------------
